test(controller): add SolverControllerTest and update test dependencies，time：2026/03/08/13:48